2008-10-07  kitone  <kitone@gna.org>

	* src/utility.cc:
	* src/utility.h:
	Remove deprecated function.

2008-10-06  kitone  <kitone@gna.org>

	* share/glade/dialog-error-checking-preferences.glade:
	* share/glade/dialog-preferences.glade:
	Fix: min timing value.

2008-10-06  kitone  <kitone@gna.org>

	* src/Subtitle.cc:
	* src/actions/errorchecking/TooLongDisplayTime.h:
	* src/actions/errorchecking/TooShortDisplayTime.h:
	* src/utility.cc:
	* src/utility.h:
	Improve the precision to the number of characters per second.
	(patch by spirit)

2008-10-06  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	Align at right the columns num, cps and cpl. (patch by spirit).

2008-10-06  kitone  <kitone@gna.org>

	* src/FileReader.cc:
	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/MPsub.h:
	* src/formats/SubStationAlpha.h:
	Add debug msg.

2008-10-06  kitone  <kitone@gna.org>

	* src/Subtitle.cc:
	* src/utility.cc:
	* src/utility.h:
	Rename function get_num_characters to get_characters_per_line.

2008-10-05  kitone  <kitone@gna.org>

	* src/FileWriter.cc:
	Improve the newline conversion by using Regex.

2008-10-05  kitone  <kitone@gna.org>

	* src/FileWriter.cc:
	Fix: conversion error.

2008-10-05  kitone  <kitone@gna.org>

	* src/FileReader.cc:
	* src/FileReader.h:
	Create lines only if needs.

2008-10-05  kitone  <kitone@gna.org>

	* src/FileReader.cc:
	* src/FileReader.h:
	Add option max_data_size.

	* src/SubtitleFormatSystem.cc:
	* src/SubtitleFormatSystem.h:
	Determine the format with only a small content.

2008-10-05  kitone  <kitone@gna.org>

	* src/gui/Application.cc:
	Split filename (tooltip) with Name and Path.
	Update UI when files are open.

2008-10-04  kitone  <kitone@gna.org>

	* src/FileWriter.cc:
	Add newline conversion.

2008-10-04  kitone  <kitone@gna.org>

	* src/FileReader.cc:
	Fix: default newline value.

2008-10-04  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/SubtitleFormatSystem.cc:
	* src/formats/AdobeEncoreDVD.h: