@@ -1,5 +1,14 @@
 2008-10-07  kitone  <kitone@gna.org>
 
+	* src/Options.cc:
+	* src/Options.h:
+	* src/debug.cc:
+	* src/debug.h:
+	* src/main.cc:
+	Add option --enable-profiling.
+
+2008-10-07  kitone  <kitone@gna.org>
+
 	* src/utility.cc:
 	* src/utility.h:
 	Remove deprecated function.
